--- a/package.json
+++ b/package.json
@@ -1,25 +1,87 @@
 {
-  "name": "typescript-solr-manager",
-  "version": "0.1.0",
+  "_args": [
+    [
+      {
+        "raw": "typescript-solr-manager@git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+        "scope": null,
+        "escapedName": "typescript-solr-manager",
+        "name": "typescript-solr-manager",
+        "rawSpec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+        "spec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+        "type": "hosted",
+        "hosted": {
+          "type": "github",
+          "ssh": "git@github.com:PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+          "sshUrl": "git+ssh://git@github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+          "httpsUrl": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+          "gitUrl": "git://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+          "shortcut": "github:PDBeurope/Typescript-Solr-Manager#v0.1-beta.1",
+          "directUrl": "https://raw.githubusercontent.com/PDBeurope/Typescript-Solr-Manager/v0.1-beta.1/package.json"
+        }
+      },
+      "C:\\Users\\mandar\\Documents\\NetBeansProjects\\pdb-search-app\\material\\v5.0"
+    ]
+  ],
+  "_from": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+  "_id": "typescript-solr-manager@0.1.0",
+  "_inCache": true,
+  "_location": "/typescript-solr-manager",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "typescript-solr-manager@git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+    "scope": null,
+    "escapedName": "typescript-solr-manager",
+    "name": "typescript-solr-manager",
+    "rawSpec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+    "spec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+    "type": "hosted",
+    "hosted": {
+      "type": "github",
+      "ssh": "git@github.com:PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+      "sshUrl": "git+ssh://git@github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+      "httpsUrl": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+      "gitUrl": "git://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+      "shortcut": "github:PDBeurope/Typescript-Solr-Manager#v0.1-beta.1",
+      "directUrl": "https://raw.githubusercontent.com/PDBeurope/Typescript-Solr-Manager/v0.1-beta.1/package.json"
+    }
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#c324edb7c7f27b46a77e1e5e3fce11eafb1be4b5",
+  "_shasum": "38bd6504c9098c20ff5b6ca85a3860a95236c809",
+  "_shrinkwrap": null,
+  "_spec": "typescript-solr-manager@git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+  "_where": "C:\\Users\\mandar\\Documents\\NetBeansProjects\\pdb-search-app\\material\\v5.0",
+  "author": {
+    "name": "Mandar Deshpande"
+  },
+  "bugs": {
+    "url": "https://github.com/PDBeurope/Typescript-Solr-Manager/issues"
+  },
+  "dependencies": {},
   "description": "AjaxSolr fork re-written in Typescript",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git"
-  },
+  "devDependencies": {},
+  "gitHead": "c324edb7c7f27b46a77e1e5e3fce11eafb1be4b5",
+  "homepage": "https://github.com/PDBeurope/Typescript-Solr-Manager#readme",
   "keywords": [
     "AjaxSolr",
     "Typescript",
     "Solr",
     "PDBe"
   ],
-  "author": "Mandar Deshpande",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/PDBeurope/Typescript-Solr-Manager/issues"
+  "main": "index.html",
+  "name": "typescript-solr-manager",
+  "optionalDependencies": {},
+  "readme": "# Typescript-Solr-Manager\r\n\r\nAjaxSolr fork re-written in Typescript. It contains only the Manager, Store and Parameter modules.\r\n\r\n**Still under development and not recommended for Production use**\r\n\r\n## License\r\nThe code is released under the Apache License Version 2.0. You can find out more about it at http://www.apache.org/licenses/LICENSE-2.0 or within the license file of the repository.\r\n",
+  "readmeFilename": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git"
   },
-  "homepage": "https://github.com/PDBeurope/Typescript-Solr-Manager#readme"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "0.1.0"
 }
