--- a/pdbe/tsconfig.json
+++ b/pdbe/tsconfig.json
@@ -20,6 +20,7 @@
   "files": [
       "manager-config1.ts",
       "search-fields-config.ts",
+      "search-fields-grouping.ts",
       "app.ts"
   ]
 }
