--- a/package.json
+++ b/package.json
@@ -20,39 +20,61 @@
         }
       },
       "C:\\Users\\mandar\\Documents\\NetBeansProjects\\pdb-search-app\\material\\v5.0"
+    ],
+    [
+      {
+        "raw": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
+        "scope": null,
+        "escapedName": null,
+        "name": null,
+        "rawSpec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
+        "spec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
+        "type": "hosted",
+        "hosted": {
+          "type": "github",
+          "ssh": "git@github.com:PDBeurope/Typescript-Solr-Manager.git",
+          "sshUrl": "git+ssh://git@github.com/PDBeurope/Typescript-Solr-Manager.git",
+          "httpsUrl": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
+          "gitUrl": "git://github.com/PDBeurope/Typescript-Solr-Manager.git",
+          "shortcut": "github:PDBeurope/Typescript-Solr-Manager",
+          "directUrl": "https://raw.githubusercontent.com/PDBeurope/Typescript-Solr-Manager/master/package.json"
+        }
+      },
+      "C:\\Users\\mandar\\Documents\\NetBeansProjects\\pdb-search-app\\material\\v7.0\\pdb-search-app"
     ]
   ],
-  "_from": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+  "_from": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
   "_id": "typescript-solr-manager@0.1.0",
   "_inCache": true,
   "_location": "/typescript-solr-manager",
   "_phantomChildren": {},
   "_requested": {
-    "raw": "typescript-solr-manager@git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+    "raw": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
     "scope": null,
-    "escapedName": "typescript-solr-manager",
-    "name": "typescript-solr-manager",
-    "rawSpec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
-    "spec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
+    "escapedName": null,
+    "name": null,
+    "rawSpec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
+    "spec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
     "type": "hosted",
     "hosted": {
       "type": "github",
-      "ssh": "git@github.com:PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
-      "sshUrl": "git+ssh://git@github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
-      "httpsUrl": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
-      "gitUrl": "git://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
-      "shortcut": "github:PDBeurope/Typescript-Solr-Manager#v0.1-beta.1",
-      "directUrl": "https://raw.githubusercontent.com/PDBeurope/Typescript-Solr-Manager/v0.1-beta.1/package.json"
+      "ssh": "git@github.com:PDBeurope/Typescript-Solr-Manager.git",
+      "sshUrl": "git+ssh://git@github.com/PDBeurope/Typescript-Solr-Manager.git",
+      "httpsUrl": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
+      "gitUrl": "git://github.com/PDBeurope/Typescript-Solr-Manager.git",
+      "shortcut": "github:PDBeurope/Typescript-Solr-Manager",
+      "directUrl": "https://raw.githubusercontent.com/PDBeurope/Typescript-Solr-Manager/master/package.json"
     }
   },
   "_requiredBy": [
+    "#USER",
     "/"
   ],
-  "_resolved": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#c324edb7c7f27b46a77e1e5e3fce11eafb1be4b5",
-  "_shasum": "38bd6504c9098c20ff5b6ca85a3860a95236c809",
+  "_resolved": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#8ac765a53f44c5695db8c84dce49d307d6cd67ff",
+  "_shasum": "6bc74b85f31632722c9b80d9ac4f425516fd11f8",
   "_shrinkwrap": null,
-  "_spec": "typescript-solr-manager@git+https://github.com/PDBeurope/Typescript-Solr-Manager.git#v0.1-beta.1",
-  "_where": "C:\\Users\\mandar\\Documents\\NetBeansProjects\\pdb-search-app\\material\\v5.0",
+  "_spec": "git+https://github.com/PDBeurope/Typescript-Solr-Manager.git",
+  "_where": "C:\\Users\\mandar\\Documents\\NetBeansProjects\\pdb-search-app\\material\\v7.0\\pdb-search-app",
   "author": {
     "name": "Mandar Deshpande"
   },
